--- a/Practice/Project/styles.css
+++ b/Practice/Project/styles.css
@@ -166,3 +166,68 @@
     text-align: left;
     padding: 10px;
 }
+#section-5{
+    background-color:#f8eed3;
+}
+#section-5-1 h1{
+    padding: 20px;
+    font-size: 50px;
+    color:#b13941;
+    font-weight: 400;
+    font-family: "Yeseva One";
+    text-align: center;
+}
+#section-5-1 p{
+    font-size: 20px;
+    color:#b13941;
+    font-weight: 400;
+    font-family: "Yeseva One";
+    text-align: center;
+}
+#section-5-2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+#section-5-2-1{
+    text-align: center;
+    width: 350px;
+    background-color: white;
+}
+#section-5-2-1 p{
+    margin-top: 50px;
+}
+.btn_3{
+    margin: 20px 0px 20px 0px;
+    border: none;
+    background-color: #b13941;
+    color: #f8eed3;
+    font-size: 20px;
+    font-family: "PT Serif";
+    cursor: pointer;
+    text-align: center;
+    padding: 10px;
+}
+#section-6{
+    display: flex;
+    justify-content: space-between;
+    background-color: #b13941;
+    padding: 50px 20px 50px 20px;
+}
+#section-6-1{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    color:#f8eed3;
+    font-family: "Yeseva One";
+    text-align: center;
+}
+#section-6-1 p{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 20px;
+    color:#f8eed3;
+    font-weight: 400;
+    font-family: "Yeseva One";
+    text-align: center;
+}
