--- a/Practice/Project/styles.css
+++ b/Practice/Project/styles.css
@@ -212,22 +212,72 @@
     display: flex;
     justify-content: space-between;
     background-color: #b13941;
-    padding: 50px 20px 50px 20px;
+    padding: 50px 10px 50px 10px;
 }
 #section-6-1{
-    margin-top: 50px;
-    margin-bottom: 30px;
-    font-size: 30px;
+    margin: 50px 0px 30px 0px;
+    font-size: 20px;
     color:#f8eed3;
     font-family: "Yeseva One";
     text-align: center;
 }
 #section-6-1 p{
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin: 50px 0px 30px 0px;
+    padding-left: 30px;
     font-size: 20px;
     color:#f8eed3;
     font-weight: 400;
     font-family: "Yeseva One";
     text-align: center;
+}
+#section-6-1-1{
+    display: flex;
+}
+#social-media{
+    background-color: #f8edda;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30px;
+}
+#section-7{
+    display: flex;
+    background-color: white;
+}
+.contact-us{
+    margin: 30px 0px 30px 20px;
+}
+.contact-us h1{
+    font-size: 58px;
+    color: #b13941;
+    font-weight: 400;
+    font-family: "Yeseva One";
+    text-align: center;
+}
+.contact-us input{
+    display: block;
+    width: 590px;
+    height: 35px;
+    padding-left: 10px;
+    font-size: 21px;
+    border: 1.5px solid #b0b0b0;
+    background-color: #efefef;
+    color: #b0b0b0;
+    margin-top: 10px;
+}
+.contact-us #Message{
+    height: 100px;
+}
+.btn_4{
+    margin-top: 35px;
+    border: none;
+    color:#f8eed3;
+    background-color:#b13941;
+    font-size: 20px;
+    font-family: "PT Serif";
+    cursor: pointer;
+    text-align: center;
+    padding: 10px;
 }
