--- a/practice/psd/practice-psd/practice-1/styles.css
+++ b/practice/psd/practice-psd/practice-1/styles.css
@@ -66,7 +66,6 @@
     background-color: #ffd7ad;
     text-align: center;
 }
-
 #section-2 h1{
     padding: 30px;
     font-size: 64px;
@@ -226,7 +225,7 @@
 }
 #section-7{
     width: 1262px;
-    height: 700px;
+    height: 600px;
     background-color: #ffd7ad;
 }
 #section-7-1 h1{
@@ -269,37 +268,31 @@
     cursor: pointer;
 }
 #footer{
-    width: 1260px;
-    height: 900px;
     background-color: #4a1831;
-    display: flex;
-    justify-content: space-around;
+    padding: 30px;
 }
-#footer h1{
-    padding: 100px 0px 0px 30px;
-    font-size: 32px;
-    color: #ffd7ad;
-    font-weight: 400;
-    font-family: "Roboto";
+.footer-conatiner{
+    padding: 100px 0px 20px 50px;
 }
-#footer p{
-    padding: 30px 0px 0px 30px;
-    font-size: 32px;
-    color: #ffd7ad;
-    font-weight: 400;
-    font-family: "Roboto";
+.footer-conatiner h1{
+    padding: 100px 0px 20px 50px;
+    font-size: 50px;
 }
-#social-media{
-    padding:50px 0px 0px 0px;    
+.footer-conatiner p{
+    padding: 50px 0px 20px 50px;
+    font-size: 30px;
 }
-#social-media img{
-    padding:20px 30px 30px 0px;    
+.footer-conatiner img{
+    padding: 10px 0px 20px 50px;
+    font-size: 30px;
 }
-#footer-2 div{
-    padding: 100px 0px 0px 0px;
+.footer-conatiner{
     display: flex;
     justify-content: space-between;
-    color: #f8eed3;
+    color:#ffd7ad;
     font-weight: 700;
-    font-family: "EB Garamond";    
+    font-family: "EB Garamond";
+}
+.footer-conatiner h2{
+    padding: 180px 0px 10px 0px;
 }
