--- a/practice/psd/practice-psd/practice-2/styles.css
+++ b/practice/psd/practice-psd/practice-2/styles.css
@@ -59,7 +59,7 @@
 }
 #section-2{
     width: 1242px;
-    height: 1100px;
+    height: 800px;
     padding: 50px 0px 20px 20px;
     background-color: #e8631c;
 }
@@ -87,7 +87,83 @@
 }
 #section-2-2-1{
     width: 372px;
-    height: 493px;
+    height: 500px;
     text-align: center;
+    background-color: #303030;
+}
+#section-2-2-1 h1{
+    padding-top: 20px;
+    font-size: 37px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-2-2-1 p{
+    padding-top: 20px;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-3{
+    width: 1262px;
+    height: 1100px;
+    background-color: #303030;
+}
+#section-3-1 h1{
+    padding-top: 20px;
+    font-size: 75px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-3-1 p{
+    padding-top: 20px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-3-2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+#section-3-2-1{
+    width: 372px;
+    height: 400px;
+    padding-top: 20px;
+    background-color: #e8631c;
+    text-align: center;
+}
+#section-3-2-1 h1{
+    padding-top: 50px;
+    font-size: 37px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 600;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-3-2-1 p{
+    padding-top: 20px;
+    font-size: 20px;
+    color: #ffffff;
+    font-family: "Oswald";
+    text-align: center;
+}
+.btn-1{
+    margin-top: 20px;
+    width: 190px;
+    height: 50px;
+    font-size: 30px;
+    color: #ffffff;
+    border-radius: 10px;
     background-color: #303030;
 }
