--- a/practice/psd/practice-psd/practice-2/styles.css
+++ b/practice/psd/practice-psd/practice-2/styles.css
@@ -110,7 +110,7 @@
 }
 #section-3{
     width: 1262px;
-    height: 1100px;
+    height: 690px;
     background-color: #303030;
 }
 #section-3-1 h1{
@@ -166,4 +166,232 @@
     color: #ffffff;
     border-radius: 10px;
     background-color: #303030;
+}
+#section-4{
+    background-color: #e8631c;
+    display: flex;
+    justify-content: space-between;
+}
+#section-4-1 img{
+    width: 600px;
+}
+#section-4-2 h1{
+    padding: 50px 0px 30px 20px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+}
+#section-4-2 p{
+    padding: 10px 0px 10px 20px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+}
+.btn-2{
+    font-size: 29px;
+    text-transform: uppercase;
+    background-color: #303030;
+    color: #ffffff;
+    border: none;
+    margin: 50px 0px 0px 20px;
+    padding:20px;
+    border-radius: 20px;
+    font-weight: 400;
+    font-family: "Oswald";
+    text-align: center;
+    cursor: pointer;
+}
+#section-5{
+    background-color: #e8631c;
+    display: flex;
+    justify-content: space-between;
+}
+#section-5-1 h1{
+    margin-top: 100px;
+    padding: 50px 0px 30px 40px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+}
+#section-5-1 p{
+    margin-top: 10px;
+    padding: 50px 0px 30px 40px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+}
+.btn-2{
+    font-size: 29px;
+    text-transform: uppercase;
+    background-color: #303030;
+    color: #ffffff;
+    border: none;
+    margin: 50px 0px 30px 20px;
+    padding:20px;
+    border-radius: 20px;
+    font-weight: 400;
+    font-family: "Oswald";
+    text-align: center;
+    cursor: pointer;
+}
+#section-5-2 img{
+    width: 660px;
+}
+#section-6{
+    width: 1263px;
+    height:500px;
+    background-color: #303030;
+}
+#section-6-1 h1{
+    padding: 100px 0px 0px 20px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-6-1 p{
+    padding: 30px 0px 0px 20px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-6-2{
+    display: flex;
+    justify-content: space-between;
+}
+#section-6-2-1 h1{
+    margin: 100px 0px 0px 80px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-6-2-1 p{
+    margin: 10px 0px 0px 80px;
+    font-size: 42px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-6-2-2 h1{
+    margin: 100px 0px 0px 0px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-6-2-2 p{
+    margin: 10px 0px 0px 0px;
+    font-size: 42px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-6-2-3 h1{
+    margin: 100px 100px 0px 0px;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-6-2-3 p{
+    margin: 10px 100px 0px 0px;
+    font-size: 42px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-7{
+    background-image: url(./image/img-7-1.jpg);
+    background-repeat: no-repeat;
+    height: 970px;
+
+}
+#section-7-1{
+    height: 970px;
+    background: #bf4101;
+    opacity: 0.6;
+}
+#section-7-1 h1{
+    padding: 340px 0px 0px 0px;
+    font-size: 50px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Nunito";
+    text-align: center;
+}
+#section-7-1 p{
+    margin-top: 50px;
+    font-size: 58px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-8{
+    width: 1263px;
+    height: 440px;
+    background-color: #e8631c;
+}
+#section-8-1 h1{
+    padding-top: 100px;
+    font-size: 75px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald";
+    text-align: center;
+}
+#section-8-1 p{
+    padding-top: 30px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-8-2 input{
+    margin-left: 300px;
+    padding:20px;
+    border-radius: 20px;
+    border: none;
+    font-size: 29px;
+    color: #000000;
+    font-weight: 400;
+    font-family: "Montserrat";
+    text-align: center;
+}
+.btn-3{
+    font-size: 29px;
+    text-transform: uppercase;
+    background-color: #303030;
+    color: #ffffff;
+    border: none;
+    margin: 50px 0px 0px 0px;
+    padding:20px;
+    border-radius: 20px;
+    font-weight: 400;
+    font-family: "Oswald";
+    text-align: center;
+    cursor: pointer;
 }
