--- a/task/display flex/parent/align_items/align_items.css
+++ b/task/display flex/parent/align_items/align_items.css
@@ -8,23 +8,38 @@
     border: 1px solid #D35400;
     display: flex;
 }
-.justify_content_flex_strat{
-    justify-content: flex-start;
+.align_items_stretch{
+    align-items: stretch;
 }
-.justify_content_flex_end{
-    justify-content: flex-end;
+.align_items_center{
+    align-items: center;
 }
-.justify_content_center{
-    justify-content: center;
+.align_items_flex_start{
+    align-items: flex-start;
 }
-.justify_content_space_between{
-    justify-content: space-between;
+.align_items_flex_end{
+    align-items: flex-end;
 }
-.justify_content_space_around{
-    justify-content: space-around;
+.align_items_baseline{
+    align-items: baseline;
 }
-.justify_content_space_evenly{
-    justify-content: space-evenly;
+.align_items_first_baseline{
+    align-items: first baseline;
+}
+.align_items_last_baseline{
+    align-items: last baseline;
+}
+.align_items_start{
+    align-items: start;
+}
+.align_items_end{
+    align-items: end;
+}
+.align_items_self_start{
+    align-items: self-start;
+}
+.align_items_self_end{
+    align-items: self-end;
 }
 .box{
     text-align: center;
