--- a/practice/position/task/style.css
+++ b/practice/position/task/style.css
@@ -4,9 +4,12 @@
     box-sizing: border-box;
     text-align: center;
 }
+body{
+    overflow: hidden;
+}
 .container {
     margin: 0 auto;
-    background-color: #e7e4e4;
+    background-color: #07fc55;
     color: rgb(12, 50, 83);
 }
 .row {
@@ -21,23 +24,23 @@ img {
 }
 .img-1{
     position: absolute;
-    left: -25px;
-    top: 0px;
+    top: -50px;
+    left: -90px;
 }
 .img-2{
     position: absolute;
+    top: -30px;
     left: 500px;
-    top: -25px;
 }
 .img-3{
     position: absolute;
-    top: 0px;
-    right: -25px;
+    top: -50px;
+    right: -90px;
 }
 .img-4{
     position: absolute;
     top: 180px;
-    left: -25px;
+    left: -100px;
 }
 .img-5{
     position: absolute;
@@ -47,20 +50,20 @@ img {
 .img-6{
     position: absolute;
     top: 180px;
-    right: -25px;
+    right:-90px;
 }
 .img-7{
     position: absolute;
-    top: 385px;
-    left: -25px;
+    top: 450px;
+    left:-90px;
 }
 .img-8{
     position: absolute;
-    top: 385px;
+    top: 450px;
     left: 500px;
 }
 .img-9{
     position: absolute;
-    top:385px;
-    right: -25px;
+    top:450px;
+    right:-90px;
 }
