--- a/practice/psd/practice-psd/media_query_psd/styles.css
+++ b/practice/psd/practice-psd/media_query_psd/styles.css
@@ -7,7 +7,7 @@ body{
     background-image: url(./images/Background.png);
 }
 #header{
-    margin-top: 40px;
+    margin:10px 0px 10px 0px;
 }
 #nav-container{
     display: flex;
@@ -16,19 +16,47 @@ body{
     width: 50%;
 }
 #nav-logo img{
-    width: 50%;
+    width: 100px;
 }
 #nav{
     width: 50%;
     display: flex;
     justify-content: space-around;
 }
-#nav a{
-   
+#nav a{  
     text-decoration: none;
     font-size: 21px;
     text-transform: uppercase;
     color: #ffff;
     font-weight: 700;
     font-family: "Bebas Neue";  
+}
+.section-1{
+    background-image: url(./images/bg-img.png);
+    width: 1200px;
+    height: 900px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.section-1 h1{
+    font-size: 60px;
+    text-transform: uppercase;
+    color: #e3bf03;
+    font-weight: 700;
+    font-family: "Poppins";
+    text-align: center;
+    filter: drop-shadow(0px 10px 5px rgba(5,42,54,0.5));
+}
+.section-1 img{
+    width: 800px;
+    height: 600px;
+    z-index: 2;
+}
+.section-1 p{
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 500;
+    font-family: "Poppins";
+    text-align: center;
 }
