--- a/practice/psd/practice-psd/practice-5/styles.css
+++ b/practice/psd/practice-psd/practice-5/styles.css
@@ -3,13 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 #bg-container{
     background-image: url(./images/bg-design.png);
     padding-top: 10px;
     height: 800px;
 }
-
 #header{
     margin-top: 40px;
 }
@@ -213,18 +211,6 @@
     background-color: #ffffff;
     text-align: center;
 }
-.btn{
-    background-color:#fee8bc;
-    color:#3d2514;
-    padding: 20px;
-    font-size: 25px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-family: "Bebas Neue";
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-}
 #content-3 h1{
     margin-top: 50px;
     font-size: 50px;
@@ -300,18 +286,6 @@
     font-family: "Montserrat";
     text-align: center;
 }
-.btn-1{
-    margin: 20px 0px 20px 80px;
-    width: 190px;
-    height: 57px;
-    background-color: #bf2222;
-    color: #ffffff;
-    font-size: 30px;
-    text-align: center;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-}
 #content-5{
     background-color: white;
     box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
@@ -347,5 +321,151 @@
     margin: 150px 0px 40px 80px;
 }
 #content-6{
-    height: 200px;
+    position: relative;
+}
+#img-1{
+    position: absolute;
+    top: 0px;
+    left:-90px;
+}
+#img-2{
+    position: absolute;
+    top: 200px;
+    left: 200px;
+}
+#plate_img{
+    position: absolute;
+    top: 100px;
+    right: 0px;
+    width: 325px;
+    overflow: hidden;
+}
+#section-6-2 {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 500px;
+}
+#section-6-2 h1{
+    margin-top: 100px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #3d2514;
+    font-weight: 700;
+    font-family: "Bebas Neue";
+}
+#section-6-2 h2{
+    margin-top: 10px;
+    text-align: center;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #3d2514;
+    font-weight: 900;
+    font-family: "Alfa Slab One";
+}
+#section-6-2 input{
+    margin: 10px;
+    padding: 10px;
+    text-align: left;
+    font-size: 20px; 
+}
+.btn {
+    text-transform: uppercase;
+    cursor: pointer;
+    border: none;
+    border-radius: 30px;
+    font-family: "Bebas Neue";
+}
+.btn-1{
+    background-color:#fee8bc;
+    color:#3d2514;
+    padding: 20px;
+    font-size: 25px;
+    font-weight: 700;
+}
+.btn-2{
+    margin: 20px 0px 20px 80px;
+    width: 210px;
+    height: 57px;
+    background-color: #bf2222;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 0px 10px 0px 10px;
+}
+.btn-3{
+    padding: 12px 68px;
+    font-size: 20px;
+    background-color: #bf2222;
+    border: none;
+    color: #ffffff;
+    font-weight: 400;
+    border-radius: 0px;
+}
+#footer{
+    position: relative;
+}
+#footer-1 img{
+    position: absolute;
+    top: 570px;
+    left: 100px;
+    width: 1360px;
+    height: 680px;
+}
+#footer-2 img{
+    position: absolute;
+    top: 600px;
+    left: 180px;
+}
+#footer-2 p{
+    position: absolute;
+    top: 760px;
+    left: 180px;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+}
+#footer-2 h2{
+    position: absolute;
+    top: 1160px;
+    left: 170px;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Montserrat";
+}
+#footer-3 {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Bebas Neue";
+}
+#footer-3-1 img{
+    position: absolute;
+    top: 900px;
+    right: 800px;
+}
+#footer-3-1 p{
+    position: absolute;
+    top: 905px;
+    right: 280px;
+}
+#footer-3-2 img{
+    position: absolute;
+    top: 980px;
+    right: 800px;
+}
+#footer-3-2 p{
+    position: absolute;
+    top: 980px;
+    right: 420px;
+}
+#footer-3-3 i{
+    z-index: 4;
+    color:white;
+    margin:30px 30px 20px 0px;
+    font-size: 50px;
 }
