--- a/practice/clippath/style.css
+++ b/practice/clippath/style.css
@@ -4,12 +4,25 @@
     box-sizing: border-box;
 }
 .box{
-    background-image: url(./../psd/images/bg-images.jpg);
+    background-image: url(./bg-img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     height: 100vh;
-    /* clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%, 0 0); */
     clip-path: polygon(0 0, 100% 0, 100% 90%, 48% 100%, 0 90%);
 }
+.nav{
+    display: flex;
+    justify-content: space-around;
+}
 #logo{
-    width: 50px;
+    margin-top: 10px;
+    width: 100px;
     height: 50px;
+}
+a{
+    padding-top: 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
 }
