--- a/practice/clippath/style.css
+++ b/practice/clippath/style.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-position: center center;
     height: 100vh;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 48% 100%, 0 90%);
+    clip-path: polygon(100% 0, 99% 65%, 47% 80%, 0 65%, 0 0);
 }
 .nav{
     display: flex;
@@ -25,4 +25,46 @@ a{
     text-decoration: none;
     color: white;
     font-size: 20px;
+}
+div h1{
+    padding-top: 50px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+div h2{
+    padding-top: 5px;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+}
+div p{
+    padding-top: 20px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+#button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+#btn-1{
+    padding: 10px;
+    font-size: 20px;
+    text-transform: uppercase;
+    border: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+}
+#btn-2{
+    margin-left: 15px;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: black;
+    cursor: pointer;
 }
