--- a/practice/clippath/style.css
+++ b/practice/clippath/style.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-position: center center;
     height: 100vh;
-    clip-path: polygon(100% 0, 99% 65%, 47% 80%, 0 65%, 0 0);
+    clip-path: polygon(100% 0, 100% 65%, 47% 80%, 0 65%, 0 0);
 }
 .nav{
     display: flex;
@@ -64,7 +64,42 @@ div p{
     margin-left: 15px;
     padding: 10px;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 15px;
+    border: 5px solid white;
     color: black;
     cursor: pointer;
+    opacity:0.4;
+}
+#down_arrow{
+    position: absolute;
+    top: 420px;
+    left: 580px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+}
+#footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 40px;
+}
+#footer-1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#footer-1 h1{
+    font-size: 20px;
+    color: black;
+}
+#footer-2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#footer-2 p{
+    margin: 20px;
+    font-size: 15px;
+    color: black;
 }
