--- a/task/netflix/styles.css
+++ b/task/netflix/styles.css
@@ -9,12 +9,9 @@
     display: flex;
     justify-content: space-around;
 }
-.nav .col-80{
-    color: red;
-    font-size: 50px;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding: 10px 0px 0px 50px;
+.nav .col-80 img{
+    padding: 20px 0px 0px 0px;
+    width: 130px;
 }
 .nav .col-20 select{
     margin-top: 30px;
@@ -83,6 +80,10 @@
     margin: 50px 0px 0px 50px;
     color: white;
     font-size: 30px;
+}
+#section-2 .col-50 img{
+    position: relative;
+    z-index: 2;
 }
 #section-2 .col-50 video{
     position: absolute;
@@ -155,10 +156,14 @@
     font-size: 30px;
     font-weight:bold;
 }
+#section-4 .col-50 img{
+    position: relative;
+    z-index: 2;
+}
 #section-4 .col-50 video{
     position: absolute;
-    width: 420px;
-    height: 200px;
+    width: 400px;
+    height: 250px;
     top: 45px;
     right: 140px;
 }
