--- a/task/netflix/styles.css
+++ b/task/netflix/styles.css
@@ -4,6 +4,7 @@
 }
 .header-bg{
     background-image: url(./Img/bg-img.jpg);
+    /* background-image: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0)60%,rgba(0,0,0,0.8)100%); */
 }
 .nav{
     display: flex;
@@ -189,6 +190,7 @@
 }
 #section-6{
     background-color: black;
+    border-bottom: 2px solid gray;
 }
 #section-6 h1{
     padding-top: 100px;
@@ -197,17 +199,58 @@
     color: white;
 }
 #section-6 .collapsible{
-    background-color: #777;
+    background-color:#2d2d2d;
     color: white;
     cursor: pointer;
-    width: 100%;
+    padding: 10px;
+    margin-left:250px;
+    width:640px;
     border: none;
-    text-align: center;
+    text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 20px;
 }
-
 #section-6 .answer{
+    background-color:#2d2d2d;
     color: white;
+    margin-left:250px;
+    width:640px;
     display: none;
+    font-size: 20px;
+}
+#section-6 p{
+    margin-top: 40px;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+}
+#section-6 input{
+    margin:30px 0px 40px 290px;
+    padding: 10px;
+    font-size: 30px;
+    background-color:black;
+    color: white;
+    border: 1px solid white;
+}
+#section-6 .btn-3{
+    padding: 10px;
+    font-size: 30px;
+    background-color:red;
+    color: white;
+    border: 1px solid white;
+    cursor: pointer;
+}
+#section-7{
+    background-color: black;
+    border-bottom: 2px solid gray;
+}
+#section-7 #Questions{
+    padding:40px 0px 0px 100px;
+    color: white;
+}
+#section-7 a{
+    color: white;
+}
+#section-7 #container{
+    padding:40px 0px 0px 100px;
 }
