--- a/task/netflix/styles.css
+++ b/task/netflix/styles.css
@@ -253,4 +253,23 @@
 }
 #section-7 #container{
     padding:40px 0px 0px 100px;
+    display: inline-flex;
+    justify-content: space-around;
+}
+#section-7 #items{
+    display: inline-flex;
+    justify-content: space-between;
+}
+#section-7 #languages{
+    margin: 30px 0px 0px 80px;
+    padding: 5px 20px 5px 20px;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    border: 3px solid white;
+    border-radius: 10px;
+}
+#section-7 p{
+    margin: 20px 0px 0px 80px;
+    color: white;
 }
