--- a/task/netflix/styles.css
+++ b/task/netflix/styles.css
@@ -3,8 +3,7 @@
     padding: 0;
 }
 .header-bg{
-    background-image: url(./Img/bg-img.jpg);
-    /* background-image: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0)60%,rgba(0,0,0,0.8)100%); */
+    background-image: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0)60%,rgba(0,0,0,0.8)100%), url(./Img/bg-img.jpg); 
 }
 .nav{
     display: flex;
@@ -14,51 +13,50 @@
     padding: 20px 0px 0px 0px;
     width: 130px;
 }
-.nav .col-20 select{
-    margin-top: 30px;
-    padding: 10px;
-    background-color: black;
-    color: white;
-    font-size: 20px;
-    border: 3px solid white;
-    border-radius: 20px;
+.col-20{
+    display: flex;
+    align-items: flex-end;
+    gap: 15px;
 }
 .btn-1{
     margin-top: 30px;
     padding: 10px;
     background-color: red;
     color: white;
-    font-size: 20px;
+    width: 65px;
+    height: 45px;
+    font-size: 13px;
     border: none;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 #section-1 h1{
     margin-top: 100px;
     text-align: center;
-    font-size: 50px;
+    font-size: 70px;
     font-weight: bold;
     color: white;
 }
 #section-1 p{
     margin-top: 10px;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     color: white;
 }
 #section-1 input{
-    margin: 30px 0px 100px 290px;
+    margin: 30px 0px 100px 450px;
     padding: 10px;
-    font-size: 30px;
+    font-size: 13px;
+    width: 250px;
     background-color: black;
-    color: white;
-    border: none;
+    color: transparent;
+    border: 1px solid white;
 }
 .btn-2{
-    padding: 10px;
+    padding: 12px 24px;
     background-color: red;
     color: white;
     border: none;
-    font-size: 30px;
+    font-size: 13px;
     cursor: pointer;
 }
 #section-2{
@@ -192,31 +190,40 @@
     background-color: black;
     border-bottom: 2px solid gray;
 }
+.faq-container{
+    display: flex;
+    justify-content: center;
+}
 #section-6 h1{
-    padding-top: 100px;
-    font-size: 50px;
+    padding: 50px 0px 10px 0px;
+    font-size: 30px;
     text-align: center;
     color: white;
+}
+#section-6 ul li{
+    padding: 5px;
 }
 #section-6 .collapsible{
     background-color:#2d2d2d;
     color: white;
     cursor: pointer;
-    padding: 10px;
-    margin-left:250px;
-    width:640px;
+    padding: 24px;
+    width: 956px;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 20px;
+    font-size: 24px;
+    font-family: Helvetica, Arial, sans-serif
+}
+.collapsible h3 span{
+    font-size: 15px;
 }
 #section-6 .answer{
     background-color:#2d2d2d;
     color: white;
-    margin-left:250px;
-    width:640px;
+    width: 956px;
     display: none;
-    font-size: 20px;
+    font-size: 15px;
 }
 #section-6 p{
     margin-top: 40px;
@@ -225,24 +232,30 @@
     font-size: 25px;
 }
 #section-6 input{
-    margin:30px 0px 40px 290px;
+    margin:30px 0px 40px 400px;
+    width: 250px;
     padding: 10px;
-    font-size: 30px;
+    font-size: 13px;
     background-color:black;
-    color: white;
+    color:transparent;
     border: 1px solid white;
 }
 #section-6 .btn-3{
-    padding: 10px;
-    font-size: 30px;
+    padding: 12px 24px;
+    font-size: 13px;
     background-color:red;
     color: white;
-    border: 1px solid white;
+    border: none;
     cursor: pointer;
 }
 #section-7{
     background-color: black;
     border-bottom: 2px solid gray;
+}
+#section-7 #wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 #section-7 #Questions{
     padding:40px 0px 0px 100px;
@@ -251,25 +264,33 @@
 #section-7 a{
     color: white;
 }
-#section-7 #container{
-    padding:40px 0px 0px 100px;
-    display: inline-flex;
+#section-7 #link-list{
+    display: flex;
     justify-content: space-around;
 }
-#section-7 #items{
-    display: inline-flex;
+#section-7 .items{
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    gap: 10px;
 }
-#section-7 #languages{
-    margin: 30px 0px 0px 80px;
-    padding: 5px 20px 5px 20px;
-    background-color: black;
+.language-button{
+    width: 108px;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.506);
+    border-radius: 5px;
+    padding: 10px 10px;
+}
+.languages-btn-text{
+    background-color: transparent;
     color: white;
     font-size: 20px;
-    border: 3px solid white;
-    border-radius: 10px;
+    border: none;
+}
+#footer-lang-btn{
+    margin: 25px 0px 0px 95px;
 }
 #section-7 p{
-    margin: 20px 0px 0px 80px;
+    margin: 20px 0px 30px 100px;
     color: white;
 }
