--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -64,19 +64,17 @@
 }
 .lang{
     display: flex;
-    flex-direction: row;
     align-items: center;
 }
+.account{
+    display: flex;
+    gap: 20px;
+}
 .nav-flag img{
-    position: relative;
-    top: 4px;
-    right: 67px;
     width: 40px;
     height: 40px;
 }
 .btn-1{
-    position: relative;
-    right: 63px;
     width: 43px;
     height: 20px;
     background-color: transparent;
@@ -86,8 +84,6 @@
 #sign-in{
     display: flex;
     flex-direction: column;
-    position: relative;
-    right: 50px;
 }
 #sign-in span{
     font-size: 15px;
@@ -95,8 +91,6 @@
 .return{
     display: flex;
     flex-direction: column;
-    position: relative;
-    right: 30px;
 }
 .return span{
     font-size: 15px;
@@ -112,11 +106,12 @@
 }
 .nav-cart-icon span{
     font-size: 20px;
+    padding-right: 10px;
 }
 .nav-header{
     background-color: #333;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 10px;
     align-items: center;
 }
@@ -125,15 +120,16 @@
     color: white;
     font-size: 15px;
     text-decoration: none;
+    padding-left: 10px;
 }
 #section-1{
-    background: linear-gradient(pink, red);
+    background: linear-gradient(#ffbac5,white);
     padding : 20px 0px 10px 20px;
     display: flex;
     flex-direction: row;
 }
 #card-1{
-    width: 340px;
+    width: 300px;
     height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
@@ -142,69 +138,67 @@
 }
 #card-1 span{
     font-family: sans-serif;
-    font-size: 25px;
+    font-size: 20px;
 }
 #card-1-1{
     display: flex;
-    gap: 25px;
+    gap: 20px;
 }
 #card-1-1-1{
     display: flex;
     flex-direction: column;
 }
 #card-1-1-1 img{
-    width: 140px;
+    width: 120px;
     height: 100px;
-    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
 }
 #card-1-1-1 span{
-    font-size: 15px;
+    font-size: 13px;
 }
 #card-1-1-2{
     display: flex;
     flex-direction: column;
 }
 #card-1-1-2 img{
-    width: 140px;
+    width: 120px;
     height: 100px;
-    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
 }
 #card-1-1-2 span{
-    font-size: 15px;
+    font-size: 13px;
 }
 #card-1-2{
     display: flex;
-    gap: 25px;
+    gap: 20px;
 }
 #card-1-2-1{
     display: flex;
     flex-direction: column;
 }
 #card-1-2-1 img{
-    width: 140px;
+    width: 120px;
     height: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
 }
 #card-1-2-1 span{
-    font-size: 15px;
+    font-size: 13px;
 }
 #card-1-2-2 img{
-    width: 140px;
+    width: 120px;
     height: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 0px 5px 0px;
 }
 #card-1-2-2 span{
-    font-size: 15px;
+    font-size: 13px;
 }
 #card-1 a{
     padding-top: 10px;
     font-size: 15px;
 }
 #card-2{
-    margin-left: 30px;
-    width: 340px;
+    margin-left: 25px;
+    width: 300px;
     height: 400px;
     background-color: white;
     padding: 20px 0px 0px 10px;
@@ -212,18 +206,18 @@
     flex-direction: column;
 }
 #card-2 span{
-    font-size: 30px;
+    font-size: 25px;
 }
 #card-2-1{
     display: flex;
     gap: 20px;
 }
 #card-2-1 img{
-    width: 150px;
+    width: 120px;
     height: 100px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
 }
 #card-2-1-1 span{
     font-size: 20px;
@@ -236,7 +230,7 @@
     gap: 20px;
 }
 #card-2-2 img{
-    width: 150px;
+    width: 120px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -251,4 +245,60 @@
 #card-2 a{
     padding-top: 15px;
     font-size: 15px;
+}
+#card-3{
+    display: flex;
+    flex-direction: column;
+}
+#card-3{
+    margin-left: 25px;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+}
+#card-3 span{
+    font-size: 25px;
+}
+#card-3 img{
+    padding-top: 10px;
+    width: 260px;
+    height: 270px;
+}
+#card-3 a{
+    padding-top: 25px;
+    font-size: 15px;
+}
+#card-4{
+    display: flex;
+    flex-direction: column;
+}
+#card-4-1{
+    margin: 0px 10px 0px 25px;
+    width: 280px;
+    height: 130px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+}
+#card-4-1 span{
+    font-size:25px;
+}
+#card-4-1{
+    text-align: center;
+}
+.btn-2{
+    margin: 10px;
+    padding: 10px 50px 10px 50px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: #FFD814;
+    color: black;
+    font-size: 20px;
+    cursor: pointer;
+}
+#card-4-2{
+    margin: 20px;
+    width: 300px;
+    height: 250px;
+    background-color: white;
 }
