--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -123,10 +123,9 @@
     padding-left: 10px;
 }
 #section-1{
-    background: linear-gradient(#ffbac5,white);
+    background: linear-gradient(#ffbac5,red);
     padding : 20px 0px 10px 20px;
     display: flex;
-    flex-direction: row;
 }
 #card-1{
     width: 300px;
@@ -301,4 +300,207 @@
     width: 300px;
     height: 250px;
     background-color: white;
+}
+#section-2{
+    background-color: #b6b6b6;
+    padding: 20px 0px 10px 20px;
+    display: flex;
+}
+#card-5{
+    width: 270px;
+    height: 390px;
+    background-color: white;
+    padding: 20px 0px 0px 10px;
+    display: flex;
+    flex-direction: column;
+}
+#card-5 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-5-1{
+    display: flex;
+    gap: 20px;
+}
+#card-5-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-5-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-5-1-1 span{
+    font-size: 13px;
+}
+#card-5-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-5-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-5-1-2 span{
+    font-size: 13px;
+}
+#card-5-2{
+    display: flex;
+    gap: 20px;
+}
+#card-5-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-5-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-5-2-1 span{
+    font-size: 13px;
+}
+#card-5-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 5px 0px;
+}
+#card-5-2-2 span{
+    font-size: 13px;
+}
+#card-5 a{
+    padding-top: 10px;
+    font-size: 15px;
+}
+#card-6{
+    margin-left: 20px;
+    width: 270px;
+    height: 390px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-6 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-6-1{
+    display: flex;
+    gap: 20px;
+}
+#card-6-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-6-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-6-1-1 span{
+    font-size: 13px;
+}
+#card-6-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-6-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-6-1-2 span{
+    font-size: 13px;
+}
+#card-6-2{
+    display: flex;
+    gap: 20px;
+}
+#card-6-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-6-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-6-2-1 span{
+    font-size: 13px;
+}
+#card-6-2-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-6-2-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-6-2-2 span{
+    font-size: 13px;
+}
+#card-6 a{
+    padding-top: 20px;
+    font-size: 15px;
+}
+#card-7{
+    margin-left: 20px;
+    width: 270px;
+    height: 390px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-7 span{
+    font-family: sans-serif;
+    font-size: 20px;
+}
+#card-7-1{
+    display: flex;
+    gap: 20px;
+}
+#card-7-1-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-7-1-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-7-1-1 span{
+    font-size: 13px;
+}
+#card-7-1-2{
+    display: flex;
+    flex-direction: column;
+}
+#card-7-1-2 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-7-1-2 span{
+    font-size: 13px;
+}
+#card-7-2{
+    display: flex;
+    gap: 20px;
+}
+#card-7-2-1{
+    display: flex;
+    flex-direction: column;
+}
+#card-7-2-1 img{
+    width: 120px;
+    height: 100px;
+    padding: 10px 0px 10px 0px;
+}
+#card-7-2-1 span{
+    font-size: 13px;
 }
