--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -576,3 +576,28 @@
     color: blue;
     padding: 20px 0px 0px 15px;
 }
+#box-1 {
+    background-color: #fff;
+    width: 200px;
+    height: 350px;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#box-1 img{
+    width: 158px;
+    height: 200px;
+}
+#box-1-1{
+    background-color: red;
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+#box-1-2{
+    color: red;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
