--- a/task/amazon/style.css
+++ b/task/amazon/style.css
@@ -657,6 +657,7 @@ body{
 }
 #section-6{
     padding: 10px 0px 10px 20px;
+    display: flex;
 }
 #card-9{
     width: 280px;
@@ -726,4 +727,55 @@ body{
 }
 #card-9-2-2 span{
     font-size: 13px;
+}
+#card-10{
+    margin-left: 20px;
+    width: 270px;
+    height: 345px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+h3{
+    font-size: 25px;
+}
+#card-10 img{
+    margin-top: 20px;
+    width: 240px;
+    height: 180px;
+    text-align: center;
+}
+#card-10 span{
+    font-size: 15px;
+}
+#price{
+    font-size: 17px;
+}
+#card-10 a{
+    margin-top: 20px;
+    text-decoration: none;
+    font-size: 15px;
+    color: blue;
+}
+#card-11{
+    margin-left: 20px;
+    width: 270px;
+    height: 345px;
+    background-color: white;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#card-11 span{
+    font-size: 25px;
+}
+#card-11-1{
+    display: flex;
+    gap: 20px;
+}
+#card-11-1 img{
+    margin-top: 20px;
+    width: 100px;
+    height: 100px;
 }
